force-app/main/default/objects/MedicationAdministration__c/MedicationAdministration__c.object-meta.xml
<CustomObject>
    <label>Medication Administration</label>
    <nameField>
        <label>Medication Administration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medication Administrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>