force-app/main/default/objects/MedicationAdministration__c/fields/Dose_Unit__c.field-meta.xml
<CustomField>
    <fullName>Dose_Unit__c</fullName>
    <label>Dose Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>