force-app/main/default/objects/MedicationAdministration__c/fields/Effective_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Effective_DateTime__c</fullName>
    <label>Effective Date/Time</label>
    <type>DateTime</type>
</CustomField>