force-app/main/default/objects/MedicationAdministration__c/fields/Medication_Request__c.field-meta.xml
<CustomField>
    <fullName>Medication_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medication Request</label>
    <referenceTo>MedicationRequest__c</referenceTo>
    <relationshipLabel>Medication Administrations</relationshipLabel>
    <relationshipName>MedicationAdministrations</relationshipName>
    <type>Lookup</type>
</CustomField>