force-app/main/default/objects/MedicationAdministration__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Medication_Request__c</columns>
    <columns>Status__c</columns>
    <columns>Effective_DateTime__c</columns>
    <columns>Dose_Quantity__c</columns>
    <columns>Dose_Unit__c</columns>
    <columns>Performer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>